Address security vulnerability that doesn't really affect us, and change Mac OS X to macOS (finally!).

--- a/homepage/_posts/1970-06-01-get_tidy.md
+++ b/homepage/_posts/1970-06-01-get_tidy.md
@@ -27,7 +27,7 @@ in adopting [**CMake**][11]. **Tidy**’s source code is available on its
 
 ## Install from a package manager
 
-### Mac OS X
+### macOS
 
 - [Fink][21]: `fink install tidy`
 - [Homebrew][20]: `brew install tidy-html5`
